--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,146 @@ client{
     background-image: url("../images/BlankMap-World.svg");
     background-size: cover;
 }
+
+
+.level {
+    padding:80px;
+    width: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: sans-serif;
+    background-color: #060c21;
+}
+.level-container {
+    position: relative;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    grid-template-rows: auto;
+    grid-gap: 40px 40px;
+}
+
+.level-container .box {
+    position: relative;
+    display: flex;
+    margin-left:40px;
+    justify-content: center;
+    align-items: center;
+    background-color: #060c21;
+    border: 1px solid #000;
+}
+
+.level-container .box::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    transform: skew(2deg, 2deg);
+    z-index: -1;
+}
+
+.level-container .box:nth-child(1)::before {
+    background: linear-gradient(315deg, #ff0057, #e64a19);
+}
+
+.level-container .box:nth-child(2)::before {
+    background: linear-gradient(315deg, #89ff00, #00bcd4);
+
+}
+
+.level-container .box:nth-child(3)::before {
+    background: linear-gradient(315deg, #e91e63, #5d02ff);
+
+}
+/* .container .box:nth-child(4)::before{
+    background: linear-gradient(315deg,#ff0000,#ffc107);
+    
+    } */
+.level-container .box ::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    background: rgba(255,255,255,0.05);
+    pointer-events: none;
+}
+.content {
+    position: relative;
+    top: 130px;
+    padding: 20px;
+    height: 530px;
+}
+
+.content h2 {
+    position: absolute;
+    top: -60px;
+    right: 10px;
+    margin: 0;
+    padding: 0;
+    font-size: 10em;
+    opacity: .1;
+    color: rgba(255, 255, 255, 0.5);
+    transition: 0.5s;
+}
+
+.box:hover .content h2 {
+    top: -140px;
+    opacity: 1;
+}
+
+.box .content h3 {
+    margin: 0 0 10px;
+    padding: 0;
+    font-size: 32px;
+    color: #fff;
+}
+
+.box .content p {
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+
+}
+
+.box .content a {
+    position: relative;
+    margin: 0;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: 1px solid #FFF;
+    display: inline-block;
+    color: #fff;
+    transition: 0.5s;
+    top: -60px;
+    opacity: 0;
+    border-radius: 5px;
+}
+
+.box:hover .content a {
+    top: 20px;
+    opacity: 1;
+    background-color: #fff;
+    color: gray;
+}
+.footer{
+    background-color:#060c21;
+}
+.creator{
+    background-color: #000;
+}
+.fontAwesome {
+    font-family: 'Helvetica', FontAwesome, sans-serif;
+  }
